--- a/package.json
+++ b/package.json
@@ -17,14 +17,13 @@
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
+        "laravel-mix-tailwind": "^0.1.0",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
+        "tailwindcss": "^1.0.4",
         "vue": "^2.5.17"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.5.0",
-        "@material/mwc-icon": "^0.3.1",
-        "@webcomponents/webcomponentsjs": "^2.1.3",
-        "material-components-web": "^0.41.0"
+        "vue-material": "^1.0.0-beta-11"
     }
 }
