--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/0.6f558b102b1787d382e4.hot-update.js": "/0.6f558b102b1787d382e4.hot-update.js"
+    "/css/app.css": "/css/app.css"
 }
