Updated the site in conformaity to mobile friendlyness

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/0.836d34a0775cc0c532c2.hot-update.js": "/0.836d34a0775cc0c532c2.hot-update.js",
+    "/0.d14198731fc8eddbe0cc.hot-update.js": "/0.d14198731fc8eddbe0cc.hot-update.js",
+    "/0.42999e147ba5367b8fb3.hot-update.js": "/0.42999e147ba5367b8fb3.hot-update.js"
 }
