#4 - completed the initial donate form

--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
         "clean-code-studio/laravel-addresses": "dev-master",
         "clean-code-studio/laravel-text-messages": "dev-master",
         "fideloper/proxy": "^4.0",
-        "grimthorr/laravel-toast": "^1.1",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "twbs/bootstrap": "^4.1"
+        "twbs/bootstrap": "^4.1",
+        "yoeunes/notify": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
