--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue": "^2.5.17"
     },
     "dependencies": {
+        "moment": "^2.24.0",
         "vue-material": "^1.0.0-beta-11"
     }
 }
