--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "moment": "^2.24.0",
-        "vue-material": "^1.0.0-beta-11"
+        "vue-material": "^1.0.0-beta-11",
+        "vuex": "^3.1.1"
     }
 }
