--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "dependencies": {
         "moment": "^2.24.0",
         "vue-material": "^1.0.0-beta-11",
+        "vue-material-slider": "^1.0.1",
+        "vue-range-component": "^1.0.3",
         "vuex": "^3.1.1"
     }
 }
