--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css",
-    "/0.170f08cd957ecd276fb0.hot-update.js": "/0.170f08cd957ecd276fb0.hot-update.js",
-    "/0.6d7172c6671cea8e7ef4.hot-update.js": "/0.6d7172c6671cea8e7ef4.hot-update.js"
+    "/css/app.css": "/css/app.css"
 }
