--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
-APP_NAME=Laravel
+APP_NAME="FeedKC"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:TVzPcSgcb55MHVYCGWorH2rTtJFGqF7hhDqLHF4skFs=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://feedkc.develop
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
+DB_DATABASE=feedkc
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
@@ -18,6 +18,7 @@ CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+SESSION_SECURE_COOKIE=false
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
@@ -37,3 +38,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+IX_SENTRY_DSN_PUBLIC=http://feedkc.develop
