--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "clean-code-studio/laravel-addresses": "dev-master",
         "clean-code-studio/laravel-text-messages": "dev-master",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "twbs/bootstrap": "^4.1",
